Style: 코드 일관성에 맞게 수정